[metadata]
name = dftbplus-ase
version = 0.1
author = DFTB+ developers group
author_email = info@dftbplus.org
url = http://www.dftbplus.org
description = Interfacing DFTB+ with the Atomic Simulation Environment
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
package_dir =
    = src
install_requires =
    wheel
    setuptools
    numpy
    ase

[options.packages.find]
where = src
